# old-shashlik

./: BUILDING  CMakeLists.txt  HACKING  HISTORY.md  INSTALLABLES  PLAN  README.md  TODO  components  dependencies.txt  platform.pk8  platform.x509.pem  shashlik.kdev4
.kdev4/: shashlik.kdev4
buildsystem/: CMakeLists.txt  README
buildsystem/android-core-headers/: CMakeLists.txt
buildsystem/liblog/: CMakeLists.txt
buildsystem/libutils/: CMakeLists.txt
buildsystem/tier1/: CMakeLists.txt
buildsystem/tier1/android-core-headers/: CMakeLists.txt
buildsystem/tier1/android-libcore-headers/: CMakeLists.txt
buildsystem/tier1/libcorkscrew/: CMakeLists.txt
buildsystem/tier1/libcutils/: CMakeLists.txt
buildsystem/tier1/liblog/: CMakeLists.txt
buildsystem/tier1/libnativehelper/: CMakeLists.txt
buildsystem/tier1/libpixelflinger/: CMakeLists.txt
buildsystem/tier1/libutils/: CMakeLists.txt
buildsystem/tier1/safe-iop/: CMakeLists.txt
buildsystem/tier2/: CMakeLists.txt
buildsystem/tier2/dexdump/: CMakeLists.txt
buildsystem/tier2/dexlist/: CMakeLists.txt
buildsystem/tier2/dexopt/: CMakeLists.txt
buildsystem/tier2/dmtracedump/: CMakeLists.txt
buildsystem/tier2/gdbjithelper/: CMakeLists.txt
buildsystem/tier2/hprof-conv/: CMakeLists.txt
buildsystem/tier2/libbinder/: CMakeLists.txt
buildsystem/tier2/libdex/: CMakeLists.txt
buildsystem/tier2/libhardware/: CMakeLists.txt
buildsystem/tier2/vm/: CMakeLists.txt
buildsystem/vm/: CMakeLists.txt
cmake/: FindFFI.cmake  FindHarfBuzz.cmake  FindLLVM.cmake  FindLibCAP.cmake  FindQt5Core.cmake  FindQt5Gui.cmake  FindQt5Widgets.cmake  FindQt5X11Extras.cmake  JarjarModule.cmake
postinstall/: CMakeLists.txt  PostInstallCommands.cmake.in
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  Controller.cpp  Controller.h  ProcessTracker.cpp  ProcessTracker.h  View.cpp  View.h  init_util.c  main.cpp  org.kde.shashlik-controller.desktop
src/controller/icons/: CMakeLists.txt  sc-apps-shashlik-controller.svgz
src/controller/package/: metadata.desktop
src/controller/package/contents/ui/: ControlEntry.qml  Main.qml
src/launcher/: AppRuntime.cpp  AppRuntime.h  CMakeLists.txt  Launch.java  ProcessGlobals.cpp  ProcessGlobals.h  appthread.cpp  appthread.h  launch.sh  main.cpp  shashlik-launcher
src/launcher/controller/: CMakeLists.txt  Controller.cpp  Controller.h  init_util.c  init_util.h  main.cpp
src/launcher/libjni/: CMakeLists.txt  android_os_FileUtils.cpp  android_os_MemoryFile.cpp  android_os_MessageQueue.cpp  android_os_Parcel.cpp  android_os_SystemClock.cpp  android_os_SystemProperties.cpp  android_os_Trace.cpp  android_text_AndroidBidi.cpp  android_text_AndroidCharacter.cpp  android_text_format_Time.cpp  android_util_Binder.cpp  android_util_EventLog.cpp  android_util_FileObserver.cpp  android_util_FloatMath.cpp  android_util_Log.cpp  android_util_Process.cpp  android_util_StringBlock.cpp  android_util_XmlBlock.cpp
src/launcher/runtime/: ShashlikRuntime.cpp  ShashlikRuntime.h  Stubs.cpp  Stubs.h
src/libs/: CMakeLists.txt  shashlikversion.h.cmake
src/libs/gralloc-shashlik/: CMakeLists.txt  bufferhandler.c  framebuffer.cpp  gr.h  gralloc.cpp  gralloc_priv.h  mapper.cpp
src/libs/hwcomposer-shashlik/: CMakeLists.txt  HwcTrace.h  hwcmodule.cpp  hwcomposer.cpp  hwcomposer.h
src/libs/libapk/: ApkFile.cpp  ApkFile.h  CMakeLists.txt
src/libs/libshashlikutils/: CMakeLists.txt  shashlikutils_export.h  shashlikversion.cpp
src/propertiesd/: CMakeLists.txt  kded_shashlik_propertiesd.desktop  propertiesd.cpp  propertiesd.h
src/tools/: CMakeLists.txt
src/tools/dexdump/: CMakeLists.txt
src/tools/dexlist/: CMakeLists.txt
src/tools/dexopt/: CMakeLists.txt
src/tools/dmtracedump/: CMakeLists.txt
src/tools/gdbjithelper/: CMakeLists.txt
src/tools/hprof-conv/: CMakeLists.txt
