add_subdirectory(deps)
add_subdirectory(libs)
add_subdirectory(propertiesd)
add_subdirectory(launcher)
add_subdirectory(controller)
if(BUILD_TOOLS)
    add_subdirectory(tools)
else()
    # this tool is needed, as in properly needed. So, don't allow not building it.
    add_subdirectory(tools/dexopt)
endif(BUILD_TOOLS)
